routing reformat, adding gateaway only requests and /swagger route change to /docs
